--- a/Baha'i/Others/ROB/V4/p050-072Ch04.html
+++ b/Baha'i/Others/ROB/V4/p050-072Ch04.html
@@ -330,7 +330,7 @@
        <td VALIGN=top><small><center><a name="p68">68</a></center><p>
 	   <hr>
 	   11. <i>Iqtidárát</i>, p. 301.<p>
-	   12. <i>Hidden Words</i>, Arabic no. <a href="../../../Baha/HiddenWords.html#arabic59">59</a>.<p> 
+	   12. <i>Hidden Words</i>, Arabic no. <a href="../../../Baha/HiddenWords.html#arabic59">59</a>; <i>The Dawn-Breakers</i>, <a href="../../DBNN/p001-018Ch01.html#p8">p. 8</a>; vol. 2, <a href="../V2/p194-221Ch09.html#p216">p. 216</a><p> 
 	   13. <i>ibid</i>. Persian no. <a href="../../../Baha/HiddenWords.html#persian27">27</a>.<p>
 	   14. <i>ibid</i>. Persian no. <a href="../../../Baha/HiddenWords.html#persian26">26</a>.
 	   </small></td>
