--- a/Baha'i/Others/ROB/V4/p205-213Ch14.html
+++ b/Baha'i/Others/ROB/V4/p205-213Ch14.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <!-- Covenant Library: \cl\Baha'i\Others\ROB\V4\p205-213Ch14.html -->
 
-<!-- ISSUES LOG
+<!-- ISSUES LOG 
 p. 209 - changed "but for whom God" to "But for him, God"
 -->
 
@@ -48,7 +48,7 @@ p. 209 - changed "but for whom God" to "But for him, God"
        <td VALIGN=top><small><center><a name="p205">205</a></center><p>
 	   * This Tablet has been translated into English and is published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para515">pp. 181</a>-91.<p>
 	   † High-ranking religious leader of a city.<p>
-	   ‡ For details see <i>The Dawn-Breakers</i>.
+	   ‡ For details see <a href="../../DBNN/p465-499Ch22.html"><i>The Dawn-Breakers</i></a>.
 	   </small></td>
 </tr>
 <tr>
@@ -108,7 +108,7 @@ p. 209 - changed "but for whom God" to "But for him, God"
        <td></td>
        <td VALIGN=top><small><center><a name="p209">209</a></center><p>
 	   * see also vol. 2, p. <a href="../V2/p171-193Ch08.html#p182">182</a>.<p>
-	   † For further information about this heroic episode, see <i>The Dawn-Breakers</i>, chapters XIV and XIX. In those days the type of one's head-dress was indicative of one's status in the community. The significance of the Black Standard comes from the Hadíth (tradition) of Islám which states that whenever it was unfurled at Khurásán, it would signalize the advent of God's new Revelation on earth.<p>
+	   † For further information about this heroic episode, see <i>The Dawn-Breakers</i>, chapters <a href="../../DBNN/p261-267Ch14.html">XIV</a> and <a href="../../DBNN/p324-377Ch19.html">XIX</a>. In those days the type of one's head-dress was indicative of one's status in the community. The significance of the Black Standard comes from the Hadíth (tradition) of Islám which states that whenever it was unfurled at Khurásán, it would signalize the advent of God's new Revelation on earth.<p>
 	   <hr>
 	   5. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para530">pp. 184</a>-5.<p>
 	   6. <i>Kitáb-i-Íqán</i>, <a href="../../../Baha/KI/p095-258.html#para146">p. 223</a>.
@@ -125,7 +125,7 @@ p. 209 - changed "but for whom God" to "But for him, God"
        <td></td>
        <td VALIGN=top><small><center><a name="p210">210</a></center><p>
 	   <hr>
-	   7. See <i>The Dawn-Breakers</i>, pp. 256-65.
+	   7. See <i>The Dawn-Breakers</i>, pp. <a href="../../DBNN/p243-260Ch13.html#para17">256</a>-65.
 	   </small></td>
 </tr>
 <tr>
