--- a/Baha'i/Others/ROB/V4/p315-328Ch21.html
+++ b/Baha'i/Others/ROB/V4/p315-328Ch21.html
@@ -191,9 +191,9 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p325">325</a></center><p>
 	   * see vol. 1, p. <a href="../V1/p105-152Ch09.html#p113">113</a>.<p>
-	   † A small town in the province of Fárs, well-known as the burial place of the heads of the martyrs of Nayríz. See <i>The Dawn-Breakers</i>, pp. 644-5.<p>
+	   † A small town in the province of Fárs, well-known as the burial place of the heads of the martyrs of Nayríz. See <i>The Dawn-Breakers</i>, pp. <a href="../../DBNN/p595-650Ch26.html#para73">644</a>-5.<p>
 	   <hr>
-	   22. Quoted by Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, p. 94.
+	   22. Quoted by Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, <a href="../../DBNN/p047-096Ch03.html#para51">p. 94</a>.
 	   </small></td>
 </tr>
 <tr>
