--- a/Baha'i/Others/ROB/V4/p329-350Ch22.html
+++ b/Baha'i/Others/ROB/V4/p329-350Ch22.html
@@ -48,7 +48,8 @@
 	   ‡ For details see vol. 1, pp. <a href="../V1/p153-197Ch10.html">153</a>-9.
 	   <hr>
 	   <hr>
-	   [Lawh-i-Dunyá] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>
+	   [Lawh-i-Dunyá] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a><p>
+	   <i>The Dawn-Breakers</i>,<a href="../../DBNN/Introduction.html#plviii"> Genealogy of the Báb</a>
 	   </small></td>
 </tr>
 <tr>
