--- a/Baha'i/Others/ROB/V4/p391-412Ch25.html
+++ b/Baha'i/Others/ROB/V4/p391-412Ch25.html
@@ -118,6 +118,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p396">396</a></center><p>
 	   * He was a brother of the wife of the Báb, see below, pp. <a href="p391-412Ch25.html#p402">402</a>-6.
+	   <hr>
+	   <i>The Dawn-Breakers</i>, <a href="../../DBNN/Introduction.html#plviii">Genealogy of the Báb</a> (#3, #19)	   
 	   </small></td>
 </tr>
 <tr>
@@ -208,6 +210,8 @@
        <td VALIGN=top><small><center><a name="p402">402</a></center><p>
 	   <hr>
 	   13. <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para163">p. 106</a>.
+	   <hr>
+	   <i>The Dawn-Breakers</i>, <a href="../../DBNN/Introduction.html#plviii">Genealogy of the Báb</a>	   
 	   </small></td>
 </tr>
 
