--- a/Baha'i/Others/ROB/V4/p429-431Apndx_II.html
+++ b/Baha'i/Others/ROB/V4/p429-431Apndx_II.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p425-428Apndx_I.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p432-440Apndx_III.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -42,6 +42,9 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p429">429</a></center><p>
 	   * see vol. 2, p. <a href="../V2/p236-269Ch11.html#p240">240</a>.
+	   <hr>
+	   <hr>
+	   <i>The Dawn-Breakers</i>, <a href="../../DBNN/Introduction.html#plviii">Genealogy of the Báb</a>	   
 	   </small></td>
 </tr>
 <tr>
@@ -49,7 +52,7 @@
 	   succeeded in regaining ownership by providing alternative accommodation for these people. He then carried out some necessary repairs and made arrangements for certain Bahá'ís to live in the House. In the meantime the House was damaged by earth tremors and had to be repaired again.<p>
 	   Early in 1872 when Munírih Khánum, who was later to become the consort of 'Abdu'l-Bahá, was on her way to 'Akká, Khadíjih Bagum, the wife of the Báb, asked her to seek permission from Bahá'u'lláh for the repair of the House and the transference of her residence to it. Bahá'u'lláh approved the request and issued instructions that the repairs must be carried out in accordance with the wishes of Khadíjih Bagum. Áqá Mírzá Áqá was instructed by her to demolish two rooms, to widen the courtyard and change the place of the pool.* The reason for these changes was that the thought of living in the House of the Báb in its original form brought such painful memories to her mind as to plunge her into the deepest grief and sorrow. The changes were made, and Khadíjih Bagum lived in the House until the end of her life in 1882. After her passing Bahá'u'lláh gave permission for Zahrá Bagum (the sister of the wife of the Báb) and her son Áqá Mírzá Áqá to transfer their residence to the House and be its custodians.<p>
 	   It was in 1905 that 'Abdu'l-Bahá wrote a Tablet to Áqá Mírzá Áqá and instructed him to restore the House of the Báb to its original form. He emphasized the importance of rebuilding the two rooms and the courtyard to the exact size and shape as in the earlier days. He asked for a drawing to be sent to Him, and when He received it He approved it and urged Áqá Mírzá Áqá to proceed immediately with the project. Again He stressed the need for great accuracy in measurements, so that the rooms which were to be rebuilt would be an exact replica of the old ones. He also urged the utmost speed in the execution of this important undertaking.<p>
-	   Áqá Mírzá Áqá was quite familiar with the position of the two
+	   Áqá Mírzá Áqá was quite familiar with the position of the two 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p430">430</a></center><p>
@@ -72,7 +75,7 @@
        <td>
 	   	   <FORM ACTION="p425-428Apndx_I.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -80,12 +83,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p432-440Apndx_III.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
