--- a/Baha'i/Others/ROB/V4/p432-440Apndx_III.html
+++ b/Baha'i/Others/ROB/V4/p432-440Apndx_III.html
@@ -2,7 +2,11 @@
 <!-- Covenant Library: \cl\Baha'i\Others\ROB\V4\p432-440Apndx_III.html -->
 
 <!-- ISSUES LOG
+19c added The Dawn-Breakers page 421 to references
+77b added The Dawn-Breakers page 608 to references
 112 'Mufaddal'...reference page does not seem to be from Revelation of Baha'u'llah volumes
+120b added ROB V1 Index, ESW, Aqdas
+173b changed Mullá 'Abdu'l Karím-i-Qazvíní to Mullá 'Abdu'l-Karím-i-Qazvíní (to match text of book)
  -->
 <html>
 <head>
@@ -125,7 +129,7 @@
 </tr>
 <tr>
        <td VALIGN=top><a name="19c"/>19</td>
-       <td><i>'He Who was wholly unversed...'</i> This passage recalls the story mentioned in the <i>Kitáb-i-Aqdas</i> concerning Ja'far, 'the sifter of Wheat' [<i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para166">&para;166</a>], see <i>The Dawn-Breakers</i>, p. 99.</td>
+       <td><i>'He Who was wholly unversed...'</i> This passage recalls the story mentioned in the <i>Kitáb-i-Aqdas</i> concerning Ja'far, 'the sifter of Wheat' [<i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para166">&para;166</a>], see <i>The Dawn-Breakers</i>, <a href="../../DBNN/p097-108Ch04.html#para5">p. 99</a>, <a href="../../DBNN/p378-429Ch20.html#para166">p. 421</a>. 
        <td></td>
 </tr>
 <tr>
@@ -280,12 +284,12 @@
 </tr>
 <tr>
        <td VALIGN=top><a name="77a"/>77</td>
-       <td><i>'prison of the Land of Mím'</i>, a reference to Bahá'u'lláh's imprisonment in Ámul. See <i>The Dawn-Breakers</i>, pp. 368-76.</td>
+       <td><i>'prison of the Land of Mím'</i>, a reference to Bahá'u'lláh's imprisonment in Ámul. See <i>The Dawn-Breakers</i>, pp. <a href="../../DBNN/p324-377Ch19.html#para72">368</a>-76.</td>
        <td></td>
 </tr>
 <tr>
        <td VALIGN=top><a name="77b"/>77</td>
-       <td><i>'Qará-Guhar'</i> and <i>'Salásil'</i>, see vol. 1, p. <a href="../V1/p007-011Ch01.html#p9">9</a>.</td>
+       <td><i>'Qará-Guhar'</i> and <i>'Salásil'</i>, see vol. 1, p. <a href="../V1/p007-011Ch01.html#p9">9</a>; <i>The Dawn-Breakers</i>, <a href="../../DBNN/p595-650Ch26.html#para18">p. 608</a>.</td>
        <td></td>
 </tr>
 <tr>
@@ -310,7 +314,7 @@
 </tr>
 <tr>
        <td VALIGN=top><a name="88"/>88</td>
-       <td>For the upheavals of Zanján, Nayríz and Tabarsí see <i>The Dawn-Breakers</i>.</td>
+       <td>For the upheavals of <a href="../../DBNN/p527-581Ch24.html">Zanján</a>, <a href="../../DBNN/p465-499Ch22.html">Nayríz</a> and <a href="../../DBNN/p324-377Ch19.html">Tabarsí</a> see <i>The Dawn-Breakers</i>.</td>
        <td></td>
 </tr>
 <tr>
@@ -380,7 +384,7 @@
 </tr>
 <tr>
        <td VALIGN=top><a name="120b"/>120</td>
-       <td><a name="'Shaykh-i-Ahsá'í"/><i>'Shaykh-i-Ahsá'í (Shaykh Ahmad)'</i>, the founder of the Shaykhí sect. See <i>The Dawn-Breakers</i>.</td>
+       <td><a name="'Shaykh-i-Ahsá'í"/><i>'Shaykh-i-Ahsá'í (Shaykh Ahmad)'</i>, the founder of the Shaykhí sect. See The Kitáb-i-Aqdas, <a href="../../../Baha/KA/p165-251Notes.html#note171">Note 171</a>; <a href="../../DBNN/p001-018Ch01.html"><i>The Dawn-Breakers</i></a>; <i>The Revelation of Bahá'u'lláh</i>, <a href="../V1/p351-363Index.html#Ahmad-i-Ahsá'í,Shaykh">vol. 1</a>, vol. 2 <a href="../2/p171-193Ch08.html#p180">p. 180</a>.</td>
        <td></td>
 </tr>
 <tr>
@@ -455,7 +459,7 @@
 </tr>
 <tr>
        <td VALIGN=top><a name="142"/>142</td>
-       <td><i>'his honour, 'Azím'</i>, Mullá 'Alí, a well-known disciple of the Báb. See <i>The Dawn-Breakers</i>, under 'Azím' in index; <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para47">p. 28</a>.</td>
+       <td><i>'his honour, 'Azím'</i>, Mullá 'Alí, a well-known disciple of the Báb. See <i>The Dawn-Breakers</i>, under '<a href="../../DBNN/p679-685Index.html#DBNN-'Alí,Mírzá,Mulla,Shaykh(surnamed'Azim)">Azím' in index</a>; <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para47">p. 28</a>.</td>
        <td></td>
 </tr>
 <tr>
@@ -570,12 +574,12 @@
 </tr>
 <tr>
        <td VALIGN=top><a name="173a"/>173</td>
-       <td><i>'Siyyid Husayn'</i>, a native of Yazd, one of the Letters of the Living who was a companion of the Báb in Máh-Kú and Chihríq and served Him as His amanuensis till His martyrdom. See <i>The Dawn-Breakers</i>, under 'Husayn-i-Yazdí, Siyyid', in the index.</td>
+       <td><i>'Siyyid Husayn'</i>, a native of Yazd, one of the <a href="../../DBNN/BabsAutographTablets.html#para8">Letters of the Living</a> who was a companion of the Báb in Máh-Kú and Chihríq and served Him as His amanuensis till His martyrdom. See <i>The Dawn-Breakers</i>, under <a href="../../DBNN/p679-685Index.html#DBNN-Husayn-i-Yazdí,Siyyid(theBáb'samanuensis)">'Husayn-i-Yazdí, Siyyid', in the index</a>.</td>
        <td></td>
 </tr>
 <tr>
        <td VALIGN=top><a name="173b"/>173</td>
-       <td><i>'Mírzá Ahmad'</i>, a reference to Mullá 'Abdu'l Karím-i-Qazvíní, a trusted disciple of the Báb. See <i>The Dawn-Breakers</i>, pp. 504-5, <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para79">p. 51</a>, and vol. 1, pp. <a href="../V1/p053-070Ch05.html">53</a>-4.</td>
+       <td><i>'Mírzá Ahmad'</i>, a reference to Mullá 'Abdu'l-Karím-i-Qazvíní, a trusted disciple of the Báb. See <i>The Dawn-Breakers</i>, pp. <a href="../../DBNN/p500-526Ch23.html#para6">504</a>-5, <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para79">p. 51</a>, and vol. 1, pp. <a href="../V1/p053-070Ch05.html">53</a>-4.</td>
        <td></td>
 </tr>
 <tr>
