--- a/Baha'i/Others/ROB/V4/p463-485Index.html
+++ b/Baha'i/Others/ROB/V4/p463-485Index.html
@@ -381,7 +381,7 @@
 	   mentioned, <a href= "../V4/p050-072Ch04.html#p64">64</a>, <a href= "../V4/p391-412Ch25.html#p401">401</a><p>
 	   </blockquote>
 	   Badakhshán, <a href= "../V4/p177-189Ch12.html#p183">183</a><p>
-	   Badasht, conference of, <a href= "../V4/p011-032Ch02.html#p16">16</a>, <a href= "../V4/p073-090Ch05.html#p73">73</a><p>
+	   <a name="Badasht,conferenceof"></a>Badasht, conference of, <a href= "../V4/p011-032Ch02.html#p16">16</a>, <a href= "../V4/p073-090Ch05.html#p73">73</a><p>
 	   Badí', <a href= "../V4/p033-049Ch03.html#p39">39</a>, <a href= "../V4/p073-090Ch05.html#p73">73</a>, <a href= "../V4/p294-314Ch20.html#p299">299</a>, <a href= "../V4/p294-314Ch20.html#p305">305</a>, <a href= "../V4/p368-390Ch24.html#p386">386</a>, <a href= "../V4/p432-440Apndx_III.html#p435">435</a><p>
 	   Badí'u'lláh (son of Bahá'u'lláh), <a href= "../V4/p050-072Ch04.html#p59">59</a>, <a href= "../V4/p368-390Ch24.html#p377">377</a>, <a href= "../V4/p432-440Apndx_III.html#p435">435</a><p>
 	   Badí'u'lláh (son of Varqá), <a href= "../V4/p050-072Ch04.html#p59">59</a><p>
@@ -1982,7 +1982,7 @@
 	   <i>Súriy-i-Vafá</i>, <a href= "../V4/p205-213Ch14.html#p205">205</a>-13<p>
 	   Surnames, <a href= "../V4/p274-293Ch19.html#p293">293</a><p>
 	   Syria, <a href= "../V4/p239-256Ch17.html#p240">240</a>, <a href= "../V4/p257-273Ch18.html#p258">258</a>, <a href= "../V4/p257-273Ch18.html#p262">262</a>, <a href= "../V4/p413-424Ch26.html#p416">416</a>, <a href= "../V4/p413-424Ch26.html#p418">418</a><p>
-	   Tabarsí, <a href= "../V4/p368-390Ch24.html#p380">380</a>, <a href= "../V4/p432-440Apndx_III.html#p435">435</a><p>
+	   <a name="Tabarsí"></a>Tabarsí, <a href= "../V4/p368-390Ch24.html#p380">380</a>, <a href= "../V4/p432-440Apndx_III.html#p435">435</a><p>
 	   Tablets of 'Abdu'l-Bahá<p>
 	   <blockquote>
 	   to Áqá Mírzá Áqá, <a href= "../V4/p429-431Apndx_II.html#p430">430</a><br>
@@ -2421,7 +2421,7 @@
 	   Yúsuf Khán, Mírzá (Mustasháru'd-Dawlih), <a href= "../V4/p257-273Ch18.html#p266">266</a><p>
 	   Yúsuf Khán-i-Vujdání, Mírzá, <a href= "../V4/p329-350Ch22.html#p333">333</a><p>
 	   Zahra Bagum, <a href= "../V4/p429-431Apndx_II.html#p429">429</a>-30<p>
-	   Zanján, <a href= "../V4/p050-072Ch04.html#p60">60</a>-3, <a href= "../V4/p294-314Ch20.html#p305">305</a>-6, <a href= "../V4/p368-390Ch24.html#p378">378</a>, <a href= "../V4/p368-390Ch24.html#p380">380</a>, <a href= "../V4/p432-440Apndx_III.html#p435">435</a><p>
+	   <a name="Zanján"></a>Zanján, <a href= "../V4/p050-072Ch04.html#p60">60</a>-3, <a href= "../V4/p294-314Ch20.html#p305">305</a>-6, <a href= "../V4/p368-390Ch24.html#p378">378</a>, <a href= "../V4/p368-390Ch24.html#p380">380</a>, <a href= "../V4/p432-440Apndx_III.html#p435">435</a><p>
 	   Zaynu'l-Muqarrabín, <a href= "../V4/p103-117Ch07.html#p105">105</a>, <a href= "../V4/p239-256Ch17.html#p244">244</a><p>
 	   Zillu's-Sultán, <i>see</i> <a href="../V4/p463-485Index.html#Mas'údMírzá">Mas'úd Mírzá</a><p>
 	   Zion, <a href= "../V4/p351-367Ch23.html#p357">357</a>, <a href= "../V4/p351-367Ch23.html#p361">361</a>, <a href= "../V4/p391-412Ch25.html#p408">408</a><p>
@@ -2459,7 +2459,7 @@
 	   <div align="right"><i>Paper</i> ISBN 0-85398-071-3</div>
 	   </blockquote>
 
-	   <center><b>`Akká, The Early Years 1868-77</b></center><p>
+	   <center><b>'Akká, The Early Years 1868-77</b></center><p>
 	   <blockquote>
 	   This book describes the exile and imprisonment of Bahá'u'lláh and his companions in the fortress city of 'Akká. including the tragic death of his younger son, The Purest Branch. It delineates the major themes of the <i>Kitáb-i-Aqdas</i>, the Most Holy Book revealed behind the walls of that city, and describes many other weighty Tablets, including those sent by Bahá'u'lláh to the kings and rulers of the time.<br>
 	   <i>503 pages, 36 illustrations</i>
