--- a/Baha'i/Others/ROB/V4/p145-160Ch09.html
+++ b/Baha'i/Others/ROB/V4/p145-160Ch09.html
@@ -85,7 +85,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p148">148</a></center><p>
-	   * For details see <i>The Dawn-Breakers</i>, pp. 278-9, 368-74.<p>
+	   * For details see <i>The Dawn-Breakers</i>, pp. <a href="../../DBNN/p268-287Ch15.html#para18">278</a>-9, 368-74.<p>
 	   † see vol. 1, pp. <a href="../V1/p007-011Ch01.html#p8">8</a>-11.<p>
 	   <hr>
 	   2. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para303">p. 103</a>.<p>
