--- a/Baha'i/Others/ROB/V4/p368-390Ch24.html
+++ b/Baha'i/Others/ROB/V4/p368-390Ch24.html
@@ -242,7 +242,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p378">378</a></center><p>
-	   * For details see <i>The Dawn-Breakers</i>.<p>
+	   * For details see <i>The Dawn-Breakers</i> [<a href="../../DBNN/p324-377Ch19.html">Mázindarán</a>, <a href="../../DBNN/p465-499Ch22.html">Nayríz</a>, <a href="../../DBNN/p527-581Ch24.html">Zanján</a>].<p>
 	   † Síyáh-Chál of Tihrán, see vol. 1, pp. <a href="../V1/p007-011Ch01.html#p8">8</a>-11. (A. T.)<p>
 	   ‡ In 'Iráq. (A.T.)<p>
 	   <hr>
@@ -425,7 +425,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p389">389</a></center><p>
-	   * For details see The Dawn-Breakers, pp. 368-76, and above, p. <a href="p145-160Ch09.html#p148">148</a>.<p>
+	   * For details see <i>The Dawn-Breakers</i>, pp. <a href="../../DBNN/p324-377Ch19.html#para72">368</a>-76, and above, p. <a href="p145-160Ch09.html#p148">148</a>.<p>
 	   † see vol. 1, p. <a href="../V1/p007-011Ch01.html#p9">9</a>.<p>
 	   <hr>
 	   37. <i>Epistle to the Son of the Wolf</i>, pp. <a href="../../../Baha/EW/p001-182.html#para108">63</a>-4.<p>
