--- a/Baha'i/SE/GPB/Cover.html
+++ b/Baha'i/SE/GPB/Cover.html
@@ -79,7 +79,7 @@
 	   Translations
 	   <blockquote>
 	   <i>
-	   THE DAWN-BREAKERS<br> 
+	   <a href="../../Others/DBNN/Cover.html">THE DAWN-BREAKERS</a><br> 
 	   <a href="../../Baha/KI/Cover.html">THE KITÁB-I-ÍQÁN</a><br> 
 	   <a href="../../Baha/EW/Cover.html">EPISTLE TO THE SON OF THE WOLF</a><br> 
 	   <a href="../../Baha/GL/Cover.html">GLEANINGS FROM THE WRITINGS OF BAHÁ'U'LLÁH</a><br> 
