--- a/Baha'i/SE/GPB/Introduction.html
+++ b/Baha'i/SE/GPB/Introduction.html
@@ -185,7 +185,8 @@
 	The Báb Himself identified His Teaching in spirit and purpose with that of Christ which was a preparation for His own: and He quoted some of Christ's Instructions to His disciples as part of His own Ordination Address to the "Letters of the Living."
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<a href="../../Others/DBNN/BabsAutographTablets.html">Letters of the Living</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
