--- a/Baha'i/SE/GPB/p087-234SecondPeriod.html
+++ b/Baha'i/SE/GPB/p087-234SecondPeriod.html
@@ -2,6 +2,7 @@
 <!-- Covenant Library: \cl\Baha'i\SE\GPB\p087-234SecondPeriod.html -->
 
 <!-- ISSUES LOG
+para36 Quote from The Dawn-Breakers changed from "the blood, shed in" to ""the blood shed in"
 para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 -->
 
@@ -83,7 +84,8 @@ para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 	From its birth, government, clergy and people had risen as one man against it and vowed eternal enmity to its cause. Muhammad Sháh, weak alike in mind and will, had, under pressure, rejected the overtures made to him by the Báb Himself, had declined to meet Him face to face, and even refused Him admittance to the capital. The youthful Násiri'd-Dín Sháh, of a cruel and imperious nature, had, both as crown prince and as reigning sovereign, increasingly evinced the bitter hostility which, at a later stage in his reign, was to blaze forth in all its dark and ruthless savagery. The powerful and sagacious Mu'tamid, the one solitary figure who could have extended Him the support and protection He so sorely needed, was taken from Him by a sudden death. The Sherif of Mecca, who through the mediation of Quddús had been made acquainted with the new Revelation on the occasion of the Báb's pilgrimage to Mecca, had turned a deaf ear to the Divine Message, and received His messenger with curt indifference. The prearranged gathering that was to have taken place in the holy city of Karbilá, in the course of the Báb's return journey from Hijáz, had, to the disappointment of His followers who had been eagerly awaiting His arrival, to be definitely abandoned. The eighteen Letters of the Living, the principal bastions that buttressed the infant strength of the Faith, had for the most part fallen. The "Mirrors," the "Guides," the "Witnesses" <a name="p90"></a>comprising the Bábí hierarchy had either been put to the sword, or hounded from their native soil, or bludgeoned into silence. The program, whose essentials had been communicated to the foremost among them, had, owing to their excessive zeal, remained for the most part unfulfilled. The attempts which two of those disciples had made to establish the Faith in Turkey and India had signally failed at the very outset of their mission. The tempests that had swept Mázindarán, Nayríz and Zanján had, in addition to blasting to their roots the promising careers of the venerated Quddús, the lion-hearted Mullá Husayn, the erudite Vahíd, and the indomitable Hujjat, cut short the lives of an alarmingly large number of the most resourceful and most valiant of their fellow-disciples. The hideous outrages associated with the death of the Seven Martyrs of Tihrán had been responsible for the extinction of yet another living symbol of the Faith, who, by reason of his close kinship to, and intimate association with, the Báb, no less than by virtue of his inherent qualities, would if spared have decisively contributed to the protection and furtherance of a struggling Cause.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<a href="../../Others/DBNN/BabsAutographTablets.html">Letters of the Living</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">90</DIV></center><p></small></td>
 </tr>
@@ -179,7 +181,8 @@ para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 	<hr>
 	["In the name He bore..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 1, <a href="../../Others/ROB/V1/p294-314Ch18.html#p305">p. 305</a><p>
 	[Sadratu'l-Muntahá] <i>Tablets of Bahá'u'lláh</i>, <a href="../../Baha/TOB/p001-270TOB.html#para577">p. 208</a><p>
-	["Speaker on Sinai"] <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p050-072Ch04.html#p70">p. 70</a>
+	["Speaker on Sinai"] <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p050-072Ch04.html#p70">p. 70</a><p>
+    <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/Introduction.html#plviii">Genealogy of the Báb</a> (#11)
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -387,10 +390,11 @@ para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 </tr>
 <tr>
 	<td><a name="para36"></a>
-	Now that He had been invested, in consequence of that potent dream, with the power and sovereign authority associated with His Divine mission, His deliverance from a confinement that had achieved its purpose, and which if prolonged would have completely fettered Him in the exercise of His newly-bestowed functions, became not only inevitable, but imperative and urgent. Nor were the means and instruments lacking whereby his emancipation from the shackles that restrained Him could be effected. The persistent and decisive intervention of the Russian Minister, Prince Dolgorouki, who left no stone unturned to establish the innocence of Bahá'u'lláh; the public confession of Mullá Shaykh 'Alíy-i-Turshízí, surnamed 'Azím, who, in the Síyáh-Chál, in the presence of the Hájibu'd-Dawlih and the Russian Minister's interpreter and of the government's representative, emphatically exonerated Him, and acknowledged his own complicity; the indisputable testimony established by competent tribunals; the unrelaxing efforts exerted by His own brothers, sisters and kindred,—all these combined to effect His ultimate deliverance from the hands of His rapacious enemies. Another potent if less evident <a name="p105"></a>influence which must be acknowledged as having had a share in His liberation was the fate suffered by so large a number of His self-sacrificing fellow-disciples who languished with Him in that same prison. For, as Nabíl truly remarks, "the blood, shed in the course of that fateful year in Tihrán by that heroic band with whom Bahá'u'lláh had been imprisoned, was the ransom paid for His deliverance from the hand of a foe that sought to prevent Him from achieving the purpose for which God had destined Him."
+	Now that He had been invested, in consequence of that potent dream, with the power and sovereign authority associated with His Divine mission, His deliverance from a confinement that had achieved its purpose, and which if prolonged would have completely fettered Him in the exercise of His newly-bestowed functions, became not only inevitable, but imperative and urgent. Nor were the means and instruments lacking whereby his emancipation from the shackles that restrained Him could be effected. The persistent and decisive intervention of the Russian Minister, Prince Dolgorouki, who left no stone unturned to establish the innocence of Bahá'u'lláh; the public confession of Mullá Shaykh 'Alíy-i-Turshízí, surnamed 'Azím, who, in the Síyáh-Chál, in the presence of the Hájibu'd-Dawlih and the Russian Minister's interpreter and of the government's representative, emphatically exonerated Him, and acknowledged his own complicity; the indisputable testimony established by competent tribunals; the unrelaxing efforts exerted by His own brothers, sisters and kindred,—all these combined to effect His ultimate deliverance from the hands of His rapacious enemies. Another potent if less evident <a name="p105"></a>influence which must be acknowledged as having had a share in His liberation was the fate suffered by so large a number of His self-sacrificing fellow-disciples who languished with Him in that same prison. For, as Nabíl truly remarks, "the blood shed in the course of that fateful year in Tihrán by that heroic band with whom Bahá'u'lláh had been imprisoned, was the ransom paid for His deliverance from the hand of a foe that sought to prevent Him from achieving the purpose for which God had destined Him."
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	["the blood shed..."] <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p595-650Ch26.html#para50">p. 634</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">105</DIV></center><p></small></td>
 </tr>
@@ -920,7 +924,8 @@ para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 	At the same time an influx of Persian Bábís, whose sole object was to attain the presence of Bahá'u'lláh, swelled the stream of visitors that poured through His hospitable doors. Carrying back, on their return to their native country, innumerable testimonies, both oral and written, to His steadily rising power and glory, they could not fail to contribute, in a vast measure, to the expansion and progress of a newly-reborn Faith. Four of the Báb's cousins and His maternal uncle, Hájí Mírzá Siyyid Muhammad; a grand-daughter of Fath-'Alí Sháh and fervent admirer of Táhirih, surnamed Varaqatu'r-Ridván; the erudite Mullá Muhammad-i-Qá'iní, surnamed Nabíl-i-Akbar; the already famous Mullá Sádiq-i-Khurásání, surnamed Ismu'lláhu'l-Asdaq, who with Quddús had been ignominiously persecuted in Shíráz; Mullá Báqir, one of the Letters of the Living; Siyyid Asadu'lláh, surnamed Dayyán; the revered Siyyid Javád-i-Karbilá'í; Mírzá Muhammad-Hasan and Mírzá Muhammad-Husayn, later immortalized by the titles of Sultánu'sh-Shuhadá and Mahbúbu'sh-Shuhadá (King of Martyrs and Beloved of Martyrs) respectively; Mírzá Muhammad-'Alíy-i-Nahrí, whose daughter, at a later date, was joined in wedlock to 'Abdu'l-Bahá; the immortal Siyyid Ismá'íl-i-Zavári'í; Hájí Shaykh Muhammad, surnamed Nabíl by the Báb; the accomplished Mírzá Áqáy-i-Munír, surnamed Ismu'lláhu'l-Muníb; the long-suffering Hájí Muhammad-Taqí, surnamed Ayyúb; Mullá Zaynu'l-'Ábidín, surnamed Zaynu'l-Muqarrabín, who had ranked as a highly esteemed mujtahid—all these were numbered among the visitors and fellow-disciples who crossed His threshold, caught a glimpse of the splendor of His majesty, and communicated far and wide the creative influences instilled into them through their contact with His spirit. Mullá Muhammad-i-Zarandí, surnamed Nabíl-i-A'zam, who may well rank as His Poet-Laureate, His chronicler and His indefatigable disciple, had already joined the exiles, and had launched out on his long and arduous series of journeys to Persia in furtherance of the Cause of his Beloved. 
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<a href="../../Others/DBNN/BabsAutographTablets.html">Letters of the Living</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1894,7 +1899,8 @@ para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 	<hr>
 	[Kitáb-i-Badí'] <i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../../Others/ROB/V2/p370-387Ch17.html">p. 370</a><p>	
 	[pilgrimage] <i>The Kitáb-i-Aqdas</i>, <a href="../../Baha/KA/p019-088Aqdas.html#para32">&para;32</a>; The Revelation of Bahá'u'lláh, vol. 1 p. <a href="../../Others/ROB/V1/p210-220Ch12.html#p211">211</a>-212; vol. 2 <a href="../../Others/ROB/V2/p236-269Ch11.html#p240">p. 240</a>; <a href="../../Others/ROB/V3/p467-483Index.html#Pilgrimage">vol. 3</a>; <a href="../../Others/ROB/V4/p463-485Index.html#Pilgrimage">vol. 4</a><p>
-	[Súriy-i-Ghusn] <i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../../Others/ROB/V2/p388-396Ch18.html">p. 388</a>
+	[Súriy-i-Ghusn] <i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../../Others/ROB/V2/p388-396Ch18.html">p. 388</a><p>
+	<a href="../../Others/DBNN/BabsAutographTablets.html">Letters of the Living</a>	
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">177</DIV></center><p></small></td>
 </tr>
@@ -2995,7 +3001,8 @@ para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 	The inconsolable Nabíl, who had had the privilege of a private audience with Bahá'u'lláh during the days of His illness; whom 'Abdu'l-Bahá had chosen to select those passages which constitute the text of the Tablet of Visitation now recited in the Most Holy Tomb; and who, in his uncontrollable grief, drowned himself in the sea shortly after the passing of his Beloved, thus describes the agony of those days: "Methinks, the spiritual commotion set up in the world of dust had caused all the worlds of God to tremble.… My inner and outer tongue are powerless to portray the condition we were in.… In the midst of the prevailing confusion a multitude of the inhabitants of 'Akká and of the neighboring villages, that had thronged the fields surrounding the Mansion, could be seen weeping, beating upon their heads, and crying aloud their grief."
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	[Nabíl] <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/Introduction.html#plxii">Introduction</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
