--- a/Baha'i/SE/GPB/p321-401FourthPeriod.html
+++ b/Baha'i/SE/GPB/p321-401FourthPeriod.html
@@ -420,7 +420,8 @@
 	<td VALIGN=top><small>
 	<hr>
 	<a href="../../Baha/HiddenWords.html"><i>The Hidden Words</i></a><p>
-	<i><a href="../../AB/SAQ/Cover.html">Some Answered Questions</a></i>
+	<i><a href="../../AB/SAQ/Cover.html">Some Answered Questions</a></i><p>
+	<a href="../../Others/DBNN/BabsAutographTablets.html">Letters of the Living</a>	
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1154,6 +1155,7 @@
 	<a href="../../Baha/HiddenWords.html">The Hidden Words</a><p>
 	<a href="../../Baha/KI/Cover.html">Kitáb-i-Íqán</a><p>
 	<a href="../../AB/SAQ/Cover.html">Some Answered Questions</a><p>
+	<a href="../../Others/DBNN/Cover.html">The Dawn-Breakers (Nabíl’s Narrative)</a><p>	
 	<a href="../../Baha/KA/Cover.html">Kitáb-i-Aqdas</a>
 	</i></small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">382</DIV></center><p></small></td>
