--- a/Baha'i/SE/GPB/p402-412Retro.html
+++ b/Baha'i/SE/GPB/p402-412Retro.html
@@ -80,7 +80,8 @@
 	The nucleus of this community had been formed by the Báb, soon after the night of the Declaration of His Mission to Mullá Husayn in Shíráz. A clamor in which the Sháh, his government, his people and the entire ecclesiastical hierarchy of his country unanimously joined had greeted its birth. Captivity, swift and cruel, in the mountains of Ádhirbáyján, had been the lot of its youthful Founder, almost immediately after His return from His pilgrimage to Mecca. Amidst the solitude of Máh-Kú and Chihríq, He had instituted His Covenant, formulated His laws, and transmitted to posterity the overwhelming majority of His writings. A conference of His disciples, headed by Bahá'u'lláh, had, in the hamlet of Badasht, abrogated in dramatic circumstances the laws of the Islamic, and ushered in the new, Dispensation. In Tabríz He had, in the presence of the Heir to the Throne and the leading ecclesiastical dignitaries of Ádhirbáyján, publicly and unreservedly voiced His claim to be none other than the promised, the long-awaited Qá'im. Tempests of devastating violence in Mázindarán, Nayríz, Zanján and Tihrán had decimated the ranks of His followers and robbed Him of the noblest and most valuable of His supporters. He Himself had to witness the virtual annihilation of His Faith and the loss of most of the Letters of the Living, and, after experiencing, in His own person, a series of bitter humiliations, He had been executed by a firing squad in the barrack-square of Tabríz. A blood bath of unusual ferocity had engulfed the greatest heroine of His Faith, had further denuded it of its adherents, had extinguished the life of His trusted amanuensis and repository of His last wishes, and swept Bahá'u'lláh into the depths of the foulest dungeon of Tihrán.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<a href="../../Others/DBNN/BabsAutographTablets.html">Letters of the Living</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
