--- a/Baha'i/SE/GPB/p413-436Index.html
+++ b/Baha'i/SE/GPB/p413-436Index.html
@@ -425,7 +425,7 @@ Bábís,
 	   	   in Zanján, <a href= "../GPB/p001-086FirstPeriod.html#p44">44</a>-46<br>
 	   	   </blockquote>
 	   </blockquote>
-Badasht, conference at, <a href= "../GPB/p001-086FirstPeriod.html#p17">17</a>, <a href= "../GPB/p001-086FirstPeriod.html#p31">31</a>-34, <a href= "../GPB/p402-412Retro.html#p403">403</a><br>
+<a name="Badasht,conferenceat"></a>Badasht, conference at, <a href= "../GPB/p001-086FirstPeriod.html#p17">17</a>, <a href= "../GPB/p001-086FirstPeriod.html#p31">31</a>-34, <a href= "../GPB/p402-412Retro.html#p403">403</a><br>
 	   <blockquote>
 	   significance of, <a href= "../GPB/p001-086FirstPeriod.html#p33">33</a><br>
 	   </blockquote>
@@ -1316,7 +1316,7 @@ League of Nations, <a href= "../GPB/p235-320ThirdPeriod.html#p305">305</a><br>
 	   messages to, <a href= "../GPB/p321-401FourthPeriod.html#p344">344</a><br>
 	   religious league of Nations embodied in Temple, <a href= "../GPB/p321-401FourthPeriod.html#p353">353</a><br>
 	   </blockquote>
-Letters of the Living, <a href= "../GPB/p001-086FirstPeriod.html#p5">5</a>, <a href= "../GPB/p001-086FirstPeriod.html#p38">38</a><br>
+<a name="LettersoftheLiving"></a>Letters of the Living, <a href= "../GPB/p001-086FirstPeriod.html#p5">5</a>, <a href= "../GPB/p001-086FirstPeriod.html#p38">38</a><br>
 	   <blockquote>
 	   'Alíy-i-Bastámí, Mulla, <a href= "../GPB/p001-086FirstPeriod.html#p10">10</a><br>
 	   Báb's charge to, summarized, <a href= "../GPB/p001-086FirstPeriod.html#p8">8</a><br>
