--- a/Baha'i/SE/GPB/p235-320ThirdPeriod.html
+++ b/Baha'i/SE/GPB/p235-320ThirdPeriod.html
@@ -46,6 +46,8 @@
 	</center>
 	</td>
 	<td VALIGN=top width="20%"><small>
+	<hr>
+	<i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/Introduction.html#plviii">Genealogy of the Báb</a> (#12)
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">235</DIV></center><p></small></td>
 </tr>
@@ -658,7 +660,8 @@
 	It was during the darkest hours of this period that, in a communication addressed to the Báb's cousin, the venerable Hájí Mírzá Muhammad-Taqí, the chief builder of the Temple of 'Ishqábád, 'Abdu'l-Bahá, in stirring terms, proclaimed the immeasurable greatness of the Revelation of Bahá'u'lláh, sounded the warnings foreshadowing the turmoil which its enemies, both far and near, would let loose upon the world, and prophesied, in moving language, the ascendancy which the torchbearers of the Covenant would ultimately achieve over them. It was at an hour of grave suspense, during that same period, that He penned His Will and Testament, that immortal Document wherein He delineated the features of the Administrative Order which would arise after His passing, and would herald the establishment of that World Order, the advent of which the Báb had announced, and the laws and principles of which Bahá'u'lláh had already formulated. It was in the course of these tumultuous years that, through the instrumentality of the heralds and champions of a firmly instituted Covenant, He reared the embryonic institutions, administrative, spiritual, and educational, of a steadily expanding Faith in Persia, the cradle of that Faith, in the Great Republic of the West, <a name="p269"></a>the cradle of its Administrative Order, in the Dominion of Canada, in France, in England, in Germany, in Egypt, in 'Iráq, in Russia, in India, in Burma, in Japan, and even in the remote Pacific Islands. It was during these stirring times that a tremendous impetus was lent by Him to the translation, the publication and dissemination of Bahá'í literature, whose scope now included a variety of books and treatises, written in the Persian, the Arabic, the English, the Turkish, the French, the German, the Russian and Burmese languages. At His table, in those days, whenever there was a lull in the storm raging about Him, there would gather pilgrims, friends and inquirers from most of the afore-mentioned countries, representative of the Christian, the Muslim, the Jewish, the Zoroastrian, the Hindu and Buddhist Faiths. To the needy thronging His doors and filling the courtyard of His house every Friday morning, in spite of the perils that environed Him, He would distribute alms with His own hands, with a regularity and generosity that won Him the title of "Father of the Poor." Nothing in those tempestuous days could shake His confidence, nothing would be allowed to interfere with His ministrations to the destitute, the orphan, the sick, and the down-trodden, nothing could prevent Him from calling in person upon those who were either incapacitated or ashamed to solicit His aid. Adamant in His determination to follow the example of both the Báb and Bahá'u'lláh, nothing would induce Him to flee from His enemies, or escape from imprisonment, neither the advice tendered Him by the leading members of the exiled community in 'Akká, nor the insistent pleas of the Spanish Consul—a kinsman of the agent of an Italian steamship company—who, in his love for 'Abdu'l-Bahá and his anxiety to avert the threatening danger, had gone so far as to place at His disposal an Italian freighter, ready to provide Him a safe passage to any foreign port He might name.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/Introduction.html#plviii">Genealogy of the Báb</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">269</DIV></center><p></small></td>
 </tr>
@@ -1265,7 +1268,8 @@
 	<td VALIGN=top><small>
 	<hr>
 	<i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p118-144Ch08.html#p122">p. 122</a><p>
-	[Mashriq'ul-Adhkár] <i>The Kitáb-i-Aqdas</i>, <a href="../../Baha/KA/p019-088Aqdas.html#para31">&para;31</a>; <i>The Revelation of Bahá'u'lláh</i>, <a href="../../Others/ROB/V1/p351-363Index.html#Mashriqu'l-Adhkár">vol. 1</a>;  vol. 2 <a href="../../Others/ROB/V2/p171-193Ch08.html#p180">p. 180</a>, <a href="../../Others/ROB/V2/p427-437Apndx_II.html#p431">p. 431</a>; vol. <a href="../../Others/ROB/V3/p467-483Index.html#Mashriqu'l-Adhkár">3</a>; <a href="../../Others/ROB/V4/p463-485Index.html#Mashriqu'l-Adhkár">4</a>
+	[Mashriq'ul-Adhkár] <i>The Kitáb-i-Aqdas</i>, <a href="../../Baha/KA/p019-088Aqdas.html#para31">&para;31</a>; <i>The Revelation of Bahá'u'lláh</i>, <a href="../../Others/ROB/V1/p351-363Index.html#Mashriqu'l-Adhkár">vol. 1</a>;  vol. 2 <a href="../../Others/ROB/V2/p171-193Ch08.html#p180">p. 180</a>, <a href="../../Others/ROB/V2/p427-437Apndx_II.html#p431">p. 431</a>; vol. <a href="../../Others/ROB/V3/p467-483Index.html#Mashriqu'l-Adhkár">3</a>; <a href="../../Others/ROB/V4/p463-485Index.html#Mashriqu'l-Adhkár">4</a><p>
+	<i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/Introduction.html#plviii">Genealogy of the Báb</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
