--- a/index.html
+++ b/index.html
@@ -57,7 +57,14 @@
 
 <h3><b><i>Others</i></b></h3>
      <blockquote>
-          <h4>Adib Taherzadeh: The Revelation of Bahá'u'lláh
+	 	  <h4>Nabíl-i-A'zam
+		  <ul type=disc>
+		       <li><a href="Baha'i/Others/DBNN/Cover.html">The Dawn-Breakers, Nabíl's Narrative</a></li>
+   		  </ul>
+
+		  <p>
+	 
+          Adib Taherzadeh: The Revelation of Bahá'u'lláh
 	   	  <ul type=disc>
 		       <li><a href="Baha'i/Others/ROB/V1/Cover.html">Volume 1: Baghdad 1853-63</a></li>
    		   	   <li><a href="Baha'i/Others/ROB/V2/Cover.html">Volume 2: Adrianople 1863-68</a></li>
@@ -76,6 +83,8 @@
 
 <h4><a href="about.html">About</a></h4>
 
-<small><p><i>The Covenant Library</i>, version 1.10.0.<p><p>
+<small><p><i>The Covenant Library, version 1.11.0.<br>
+Best viewed with desktop versions of Firefox or Chrome browers</i>
+<p>
 </body>
 </html>
