--- a/about.html
+++ b/about.html
@@ -43,6 +43,11 @@ Many friends have asked for the ability to download all the books in this librar
        <td><center><b>Date</b></center></td>
 </tr>
 <tr>
+       <td>1.11.0</td>
+       <td>Addition of <i>The Dawn-Breakers, Nabíl's Narrative</i></td>
+       <td>Oct 2020</td>
+</tr>
+<tr>
        <td>1.10.0</td>
        <td>Addition of <i>God Passes By</i></td>
        <td>May 2020</td>
