--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		   	   <li><a href="Baha'i/Baha/EW/Cover.html">Epistle to the Son of the Wolf</a></li>
    		   	   <li><a href="Baha'i/Baha/GL/Cover.html">Gleanings From The Writings Of Bahá'u'lláh</a></li>
 		   	   <li><a href="Baha'i/Baha/HiddenWords.html">The Hidden Words of Bahá'u'lláh</a></li>
-		   	   <li><a href="Baha'i/Baha/KA/Cover.html">The Kitáb-i-Aqdas</a></li>			   
+		   	   <li><a href="Baha'i/Baha/KA/Cover.html">The Kitáb-i-Aqdas</a></li>
 		   	   <li><a href="Baha'i/Baha/KI/Cover.html">The Kitáb-i-Íqán</a></li>
 		   	   <li><a href="Baha'i/Baha/PM/Cover.html">Prayers and Meditations</a></li>
    		   	   <li><a href="Baha'i/Baha/TSVATFV.html">The Seven Valleys and The Four Valleys</a></li>
@@ -33,16 +33,16 @@
 		   </ul>
 		   </h4>
 	   </td>
-	   
+
        <td valign='top'>
 	   	   <h4>
 	   	   <ul type=disc>
 		   	   <li><h4><a href="Baha'i/AB/SAQ/Cover.html">Some Answered Questions</a></h4></li>
 		   </ul>
 		   </h4>
-			
+
 		   <br><br><br>
-			
+
 		   <h3><b><i>Shoghi Effendi</i></b></h3>
 	   	   <h4>
 	   	   <ul type=disc>
@@ -63,7 +63,7 @@
    		  </ul>
 
 		  <p>
-	 
+
           Adib Taherzadeh: The Revelation of Bahá'u'lláh
 	   	  <ul type=disc>
 		       <li><a href="Baha'i/Others/ROB/V1/Cover.html">Volume 1: Baghdad 1853-63</a></li>
@@ -84,7 +84,7 @@
 <h4><a href="about.html">About</a></h4>
 
 <small><p><i>The Covenant Library, version 1.11.0.<br>
-Best viewed with desktop versions of Firefox or Chrome browers</i>
+Best viewed with desktop versions of Firefox or Chrome browsers</i>
 <p>
 </body>
 </html>
