--- a/Baha'i/Others/ROB/V3/p467-483Index.html
+++ b/Baha'i/Others/ROB/V3/p467-483Index.html
@@ -93,7 +93,7 @@
 	   'Salt of My Tablets', <a href= "../V3/p174-203Ch09.html#p199">199ff.</a><p>
 	   <a name="Súriy-i-Haykal"></a><i>Súriy-i-Haykal</i> or <i>Súratu'l-Haykal</i> (Súrih of the Temple), <a href= "../V3/p108-132Ch06.html#p132">132</a>-7, <a href= "../V3/p133-146Ch07.html#p140">140</a>-46, <a href= "../V3/p147-173Ch08.html#p147">147</a>; quoted <i>passim</i>.<p>
 	   <i>Súriy-i-Mulúk</i> (Súrih of the Kings) <a href= "../V3/p108-132Ch06.html#p109">109</a>, <a href= "../V3/p133-146Ch07.html#p146">146</a>, <a href= "../V3/p221-252Ch11.html#p238">238</a>, <a href= "../V3/p221-252Ch11.html#p242">242</a>, <a href= "../V3/p221-252Ch11.html#p251">251</a>; quoted, <a href= "../V3/p147-173Ch08.html#p156">156</a><p>
-	   <i>Súriy-i-Ra'ís</i>, <a href= "../V3/p032-051Ch02.html#p34">34</a> and n., <a href= "../V3/p087-107Ch05.html#p87">87</a>, <a href= "../V3/p087-107Ch05.html#p100">100n.</a>, <a href= "../V3/p108-132Ch06.html#p109">109</a>, <a href= "../V3/p108-132Ch06.html#p123">123</a>; quoted, <a href= "../V3/p147-173Ch08.html#p151">151</a><p>
+	   <a name="Súriy-i-Ra'ís"></a><i>Súriy-i-Ra'ís</i>, <a href= "../V3/p032-051Ch02.html#p34">34</a> and n., <a href= "../V3/p087-107Ch05.html#p87">87</a>, <a href= "../V3/p087-107Ch05.html#p100">100n.</a>, <a href= "../V3/p108-132Ch06.html#p109">109</a>, <a href= "../V3/p108-132Ch06.html#p123">123</a>; quoted, <a href= "../V3/p147-173Ch08.html#p151">151</a><p>
 	   <i>Tablet to Hájí 'Abdu'l-Majíd</i> (<i>Abá Badí'</i>), <a href= "../V3/p174-203Ch09.html#p179">179</a>-80, <a href= "../V3/p174-203Ch09.html#p202">202</a>-3<p>
 	   <i>Tablet for 'Abdu'r-Rahím of Bushrú'íyyih</i>, <a href= "../V3/p052-072Ch03.html#p60">60</a>-61<p>
 	   <i>Tablet of Ahmad</i>, <a href= "../V3/p253-274Ch12.html#p257">257</a><p>
